# riot.cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/riot/: riot.h
include/riot/core/: core.h  http.h  json.h  url.h
include/riot/dto/: dto.h  dto_base.h  dto_complex.h  dto_decoder.h  dto_exception.h  dto_map.h  dto_retriever.h  dto_vector.h  match.h  summoner.h  team.h
include/riot/lol/: game.h  match.h  stats.h  summoner.h  team.h
include/riot/lol/match/: participant.h  participant_identity.h  participant_stats.h  player.h  team.h
lib/: riot_api.lib
src/riot/: riot.cpp
src/riot/core/: core.cpp  http.cpp  json.cpp  url.cpp
src/riot/dto/: dto.cpp  dto_base.cpp  dto_complex.cpp  dto_exception.cpp  dto_retriever.cpp  match.cpp  summoner.cpp  team.cpp
src/riot/lol/: game.cpp  match.cpp  summoner.cpp  team.cpp
src/riot/lol/match/: participant.cpp  participant_identity.cpp  participant_stats.cpp  player.cpp  team.cpp
tests/: .gitignore  CMakeLists.txt  int_game.cpp  int_json.cpp  int_key.cpp  int_key.h  int_match.cpp  int_summoner.cpp  int_team.cpp  test_url.cpp  unit_http.cpp
